welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:13: error: value update is not a member of Int
			if ((getX()=6)) && (!positionFinale()){
                             ^ZigZag:13: error: not found: value &&
			if ((getX()=6)) && (!positionFinale()){
                                        ^ZigZag:15: error: value update is not a member of Int
			} else if ((getX()=0)) && (getY()!=0) {
                                    ^ZigZag:15: error: not found: value &&
			} else if ((getX()=0)) && (getY()!=0) {
                                               ^